# mini-poml-rs

./: AUTHORS  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: poml_render.rs
src/: error.rs  lib.rs  parser.rs
src/render/: expression.rs  mod.rs  render_context.rs  tag_renderer.rs  tests.rs  utils.rs
src/render/expression/: evaluate.rs  mod.rs  tokenize.rs  utils.rs
src/render/expression/evaluate/: cast.rs  mod.rs  tests.rs
src/render/tag_renderer/: attribute_utils.rs  markdown.rs  mod.rs
supported_poml_docs/1_simple_greeting/: main.poml
supported_poml_docs/2_for_loop_on_context/: context.json  main.poml
supported_poml_docs/3_let_context/: main.poml
supported_poml_docs/4_inline_json/: main.poml
supported_poml_docs/5_conditional_include/: main.poml  user.poml
supported_poml_docs/6_table/: main.poml
