[package]
name = "mini-poml-rs"
version = "0.0.1"
edition = "2024"
description = "A partial implementation of POML"
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/linmx0130/mini-poml-rs"
repository = "https://github.com/linmx0130/mini-poml-rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
clap = { version = "4.5.46", features = ["derive"] }
